1. Unification notation and constraints usedd in the mathematical models in the routing introduction page.

--- a/routing_logistics_app/templates/routing_logistics_app/cvrp_introduction.html
+++ b/routing_logistics_app/templates/routing_logistics_app/cvrp_introduction.html
@@ -57,14 +57,13 @@
             </ul>
 
             <h3>3. 수학적 모델</h3>
-            <p>CVRP 모델은 VRP의 수학적 모델에 새로운 입력 데이터와 제약 조건을 추가하여 구성됩니다.</p>
-            <h4>목적 함수 및 기본 제약 조건</h4>
-            <p>총 이동 거리를 최소화하는 목적 함수와 고객 방문, 차량 흐름 보존 등 VRP의 기본 제약 조건들은 그대로 유지됩니다.</p>
+            <p>CVRP 모델은 VRP의 수학적 모델에 새로운 입력 데이터와 제약 조건을 추가하여 구성됩니다.<br>
+                VRP의 기본 목적 함수와 제약 조건들(고객 방문, 차량 흐름 보존 등)은 그대로 유지됩니다.</p>
             <div class="model-definition-content highlight-box">
                 <h4 class="model-definition-content"><strong>추가 입력 데이터:</strong></h4>
                 <ul>
-                    <li>\(q_i\): 고객 \(i\)의 수요량 (차고지의 수요 \(q_0=0\))</li>
-                    <li>\(Q_k\): 차량 \(k\)의 최대 적재 용량</li>
+                    <li><strong>\(q_i\)</strong> : 고객 \(i\)의 수요량 (차고지의 수요 \(q_0=0\))</li>
+                    <li><strong>\(Q_k\)</strong> : 차량 \(k\)의 최대 적재 용량</li>
                 </ul>
                 <hr>
 
